<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_social">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_dialog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                app:backgroundTint="@android:color/darker_gray" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_link"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/save"
                app:backgroundTint="@color/teal_200" />
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_social"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/social_link">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_social_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_phone"
                android:paddingBottom="24dp"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>