<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MyProfile">

        <EditText
            android:id="@+id/tv_user_location"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/tv_user_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:minWidth="50dp"
            android:text="@string/austin"
            android:textColor="?android:textColorPrimary"
            android:textSize="12sp"
            app:drawableStartCompat="@drawable/ic_baseline_location_on_24" />

        <EditText
            android:id="@+id/tv_bio"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_below="@id/tv_user_location"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:minWidth="50dp"
            android:text="@string/singing_makes_me_happy"
            android:textColor="?android:textColorPrimary" />

        <EditText
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_below="@id/frame_profile_pic"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:minWidth="50dp"
            android:text="@string/scarlett"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?android:textColorPrimary"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_profile_cover"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/banner" />

        <ImageView
            android:id="@+id/iv_edit_cover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_profile_cover"
            android:layout_alignParentEnd="true"
            android:padding="10dp"
            android:src="@drawable/ic_edit"
            app:tint="@color/white" />

        <LinearLayout
            android:id="@+id/ll_social"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_bio"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcv_twitter"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="3dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_twitter" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcv_youtube"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="3dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_youtube" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcv_spotify"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="3dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_spotify" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcv_instagram"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="3dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_instagram" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcv_soundcloud"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="3dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_soundcloud" />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_songs_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_social"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:visibility="gone"
            tools:itemCount="6"
            tools:listitem="@layout/song_item_layout" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_social"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:hint="@string/number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_phone"
                android:paddingBottom="24dp"
                android:text="(269)-748-9882"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_number"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_email"
                android:paddingBottom="24dp"
                android:text="abc@gmail.com"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_email"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:hint="@string/website">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_web"
                android:paddingBottom="24dp"
                android:text="www.google.com"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_profession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_website"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:hint="@string/profession_s">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_profession"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_business"
                android:paddingBottom="24dp"
                android:text="Blogger"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_profession"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:hint="@string/birthday_zodiac">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_birthday_zodiac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_cake"
                android:paddingBottom="24dp"
                android:text="1/1/2001 ♎"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_favorite_quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_birthday"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:hint="@string/favorite_quote">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_fav_quote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_baseline_favorite_border_24"
                android:paddingBottom="24dp"
                android:text="Love For All, Hatred For None."
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_top_book1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_favorite_quote"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:hint="@string/top_books">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_top_book1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_baseline_menu_book_24"
                android:paddingBottom="24dp"
                android:text="In Search of Lost Time"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:id="@+id/frame_profile_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_profile_cover"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="-50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:src="@drawable/ic_edit" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile_pic"
                android:layout_width="102dp"
                android:padding="5dp"
                android:layout_height="102dp"
                android:elevation="5dp"
                android:src="@drawable/account" />
        </FrameLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/save"
            app:backgroundTint="@color/teal_700"
            android:layout_marginRight="20dp"
            android:layout_below="@id/txt_top_book1" />
    </RelativeLayout>
</ScrollView>